<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20sp"
            android:text="@string/customize_wheel_title"
            android:textColor="@color/mainColor"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_text"
            android:text="@string/customized_wheel_description"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layout_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:textSize="@dimen/text_size"
            android:text="@string/add_choice" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choices_in_range" />

        <Button
            android:id="@+id/button_submit_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/top_margin"
            android:background="@color/mainColor"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/submit_choices"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>