<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/mainColor"
    tools:context="com.artificialbrain.quantumwheel.activities.LauncherActivity">

    <TextView
        android:id="@+id/launcher_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/launcher_title"
        android:textSize="@dimen/title_size"
        android:textColor="@color/wheel_1st_color" />

    <TextView
        android:id="@+id/launcher_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/launcher_description"
        android:textSize="@dimen/text_size"
        android:textColor="@android:color/white"
        android:layout_below="@+id/launcher_title" />

    <Button
        android:id="@+id/launcher_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launcher_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/wheel_1st_color"
        android:background="@color/wheel_3rd_color"
        />

</RelativeLayout>