<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.artificialbrain.quantumwheel.activities.SpinningWheelActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/mainColor"
        android:textStyle="bold"
        android:paddingTop="20sp"
        />

    <TextView
        android:id="@+id/description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textStyle="bold"
        android:layout_below="@id/title_text"
        />

    <Switch
        android:id="@+id/real_device_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run_on_real_device"
        android:layout_below="@+id/description_text"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        />

    <rubikstudio.library.LuckyWheelView
        app:lkwBackgroundColor="#FF9800"
        app:lkwTopTextColor="#263238"
        app:lkwCenterImage="@drawable/wheel2"
        app:lkwCursor="@drawable/ic_cursor"
        android:id="@+id/luckyWheel"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/real_device_switch" />

    <ProgressBar
        android:id="@+id/quantum_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/description_text"
        />

    <Button
        android:id="@+id/play"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:text="PLAY"
        android:textStyle="bold"
        android:background="@color/mainColor"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/luckyWheel"
        android:layout_marginTop="20dp"
        />
</RelativeLayout>